grammar.js
    source_file: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      $.header,
      $.memreserve,
      $.devicetree,

      // In the compiler, these are actually defined in the rule "devicetree"
      // (above). However, it makes more sense to have these seperated; they
      // don't actually have a tree node_def (and thus easier to distinguish
      // from actual trees when parsing).
      $.delete_node_ref,
      $.omit_node_ref,

      // An include file (.dtsi) can start with a subnode or properties. Diverge
      // from the compiler in this case.
      $.subnode,
      $.property,

      $._in_between_items,
      $.preproc_if,
      $.preproc_ifdef,
    ),

    label: $ => choice(
      new RegExp(LABEL_CHAR + ":"),
      seq($.preproc_function_call, token.immediate(":")),
    ),
    label_ref: $ => choice(
      new RegExp("&" + LABEL_CHAR),
      alias($._preproc_function_call_ref, $.preproc_function_call),
    ),

    path_ref: $ => new RegExp("&\\{" + PATH_CHAR + "*\\}"),

    reference: $ => choice($.label_ref, $.path_ref),

    devicetree: $ => choice(
      seq("/", $.node_def),
      seq(
        optional($.label),
        $.reference,
        $.node_def,
      ),
    ),

    delete_node_ref: $ => seq("/delete-node/", $.reference, ";"),

    omit_node_ref: $ => seq("/omit-if-no-ref/", $.reference, ";"),

    node_def: $ => seq(
      "{",
      seq(
        repeat(seq(repeat($._in_between_items_node_def), $.property)),
        repeat(seq(repeat($._in_between_items_node_def), $.subnode)),
        repeat($._in_between_items_node_def),
      ),
      "}", ";"
    ),

    _in_between_items_node_def: $ => choice(
      $._in_between_items,
      $.preproc_if_in_node_def,
      $.preproc_ifdef_in_node_def,
    ),

    property: $ => seq(
      repeat($.label),
      choice(
        seq(field("name", $.prop_node_name), "=",
            seq($.prop_data, repeat(seq(",", $.prop_data))), ";"),
        seq(field("name", $.prop_node_name), ";"),
        $.delete_property,
      ),
    ),

    delete_property: $ => seq(
      "/delete-property/", field("name", $.prop_node_name), ";"
    ),

    prop_node_name: $ => new RegExp("\\\\?" + PROP_NODE_CHAR + "+"),
    prop_data: $ => seq(
      repeat($.label),
      choice(
        $.string_literal,
        seq(optional($.bits), $.array),
        $.bytestring,
        $.reference,
        $.incbin,
        $.preproc_identifier,
        $.preproc_function_call,
      ),
      repeat($.label)
    ),

    bits: $ => seq("/bits/", $.int_literal),

    array: $ => seq(
      "<",
      repeat(
        seq(
          repeat($.label),
          choice(
            $._int_prim,
            $.reference,
            $.preproc_ifdef_in_array,
          ),
        )
      ),
      repeat($.label),
      ">",
    ),

    bytestring: $ => seq(
      "[",
      repeat(
        seq(
          repeat($.label),
          $.byte
        )
      ),
      repeat($.label),
      "]"
    ),

    byte: $ => /[0-9a-fA-F]{2}/,

    incbin: $ => seq(
      "/incbin/",
      "(",
      $.string_literal,
      optional(seq(",", $._int_prim, ",", $._int_prim)),
      ")"
    ),

    _int_prim: $ => choice(
      $.int_literal,
      $.char_literal,
      $.int_parenthesized_expression,
      $.preproc_identifier,
      $.preproc_function_call,
    ),

    int_parenthesized_expression: $ => seq("(", $._int_expr, ")"),

    _int_expr: $ => choice(
      $.int_literal,
      $.char_literal,
      $.int_unary_op,
      $.int_binary_op,
      $.int_ternary_op,
      $.int_parenthesized_expression,
      $.preproc_identifier,
      $.preproc_function_call,
    ),

    int_unary_op: $ => prec(PRECEDENCE.UNARY, seq(
      field("operator", choice("-", "~", "!")),
      field("argument", $._int_prim)
    )),

    int_binary_op: $ => {
      const OP_PRECEDENCE = [
        ["||", PRECEDENCE.LOGICAL_OR],
        ["&&", PRECEDENCE.LOGICAL_AND],
        ["|", PRECEDENCE.BITWISE_OR],
        ["^", PRECEDENCE.BITWISE_XOR],
        ["&", PRECEDENCE.BITWISE_AND],
        ["==", PRECEDENCE.EQUAL],
        ["!=", PRECEDENCE.EQUAL],
        ["<", PRECEDENCE.RELATIONAL],
        [">", PRECEDENCE.RELATIONAL],
        ["<=", PRECEDENCE.RELATIONAL],
        [">=", PRECEDENCE.RELATIONAL],
        ["<<", PRECEDENCE.SHIFT],
        [">>", PRECEDENCE.SHIFT],
        ["+", PRECEDENCE.ADD],
        ["-", PRECEDENCE.ADD],
        ["*", PRECEDENCE.MULTIPLY],
        ["/", PRECEDENCE.MULTIPLY],
        ["%", PRECEDENCE.MULTIPLY],
      ];

      return choice(
        ...OP_PRECEDENCE.map(([op, precedence]) => {
          return prec.left(
            precedence,
            seq($._int_expr, op, $._int_expr)
          );
        })
      );
    },

    int_ternary_op: $ => prec.right(PRECEDENCE.CONDITIONAL, seq(
      $._int_expr, "?", $._int_expr, ":", $._int_expr
    )),

    int_literal: $ => /([0-9]+|0[xX][0-9a-fA-F]+)(U|L|UL|LL|ULL)?/,

    // The pattern /'([^']|\\')*'/ wrapped in quotes and escaped (so editors can
    // parse it).
    string_literal: $ => new RegExp('"([^\\\\"]|\\\\.)*"'),

    _preproc_function_call_ref: $ => seq(
      field("function", alias($.preproc_function_name_ref,
                              $.preproc_identifier)),
      field("arguments", $.preproc_argument_list)
    ),
